# Emotion-Detection-API

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api/dependencies/: auth.py  database.py
src/api/routers/: auth.py  emotions.py
src/models/: emotion.py  user.py
src/schemas/: emotion.py  user.py
src/services/: emotion_service.py  image_service.py
src/utils/: constants.py  errors.py  logger.py
tests/: test_auth.py  test_emotions.py  test_services.py
